# report-template

./: .gitignore  .jira.config.example.yaml  LICENSE  README.md  conflu.json.example  pyproject.toml  requirements.txt
docs/: customization.md  jira-integration.md  usage.md
examples/: feature_dev_example.py  minimal_tasks.yaml
examples/sample_data/: feature_dev.yaml
src/report_template/: __init__.py  cli.py  confluence_client.py  generator.py  jira_client.py  models.py
src/report_template/formatters/: __init__.py  docx.py  html.py  markdown.py  pdf.py
src/report_template/templates/: engineering_init.md.j2  feature_dev.html.j2  feature_dev.md.j2  program_mgmt.md.j2
tests/: __init__.py  test_docx.py  test_formatters.py  test_generator.py  test_models.py
